--- a/deno.json
+++ b/deno.json
@@ -4,6 +4,7 @@
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
-    "react": "npm:react"
+    "react": "npm:react",
+    "rxjs": "npm:rxjs"
   }
 }
